--- a/tasks-gui/src/app/app.component.html
+++ b/tasks-gui/src/app/app.component.html
@@ -7,10 +7,10 @@ Task details: <textarea name= "toDoDetail" id= "toDoDetail" [formControl]="toDoD
 <div>
     <ul>
         <li *ngFor="let t of tasks" (click)="showTask(t)">            
-            <span>{{t.id}}</span><br/>
-            <input value={{t.toDo}} /> <br/>
-            <textarea>{{t.toDoDetails}}</textarea> <br/>
-            <button (click)="updateTask(t.id, t.toDo, t.toDoDetails)">update</button> <br/>
+            <span>{{t.id}}</span>
+            <input value={{t.toDo}} />
+            <textarea>{{t.toDoDetails}}</textarea> 
+            <button (click)="updateTask(t.id, t.toDo, t.toDoDetails)">update</button> 
             <button (click)="deleteTask(t.id)">delete</button> <br/>
         </li>
     </ul>
